--- a/Artefact Prototype/css/style.css
+++ b/Artefact Prototype/css/style.css
@@ -1,34 +1,3 @@
-/* Global */
-html {
-    min-height: 100%;
-    box-sizing: content-box;
-}
-
-body {
-    height: calc(100vh - 14em);
-    color: rgba(255, 255, 255, .75);
-    font-family: "Poppins", sans-serif;
-    background-color: #171717;
-    font-size: 28px;
-    padding:6em;
-}
-
-button {
-    font-size: 16px;
-    text-transform: uppercase;
-    background: transparent;
-    background: #47cf73;
-    color: #333;
-    padding: 16px;
-    font-weight: 600;
-    border: none;
-    font-family: "Poppins", sans-serif;
-}
-
-img {
-    max-width: 25%;
-}
-
 /* Fonts */
 @font-face {
     font-family: "Fraktion";
@@ -44,9 +13,43 @@ img {
     font-style: italic;
 }
 
+/* Global */
+html {
+    min-height: 100%;
+    box-sizing: content-box;
+}
+
+body {
+    height: calc(100vh - 14em);
+    color: rgba(255, 255, 255, .75);
+    background-color: #171717;
+    font-size: 28px;
+    padding: 6em;
+}
+
+button {
+    font-size: 16px;
+    text-transform: uppercase;
+    background: transparent;
+    background: #47cf73;
+    color: #333;
+    padding: 16px;
+    margin-top: 100px;
+    font-weight: 600;
+    border: none;
+    font-family: 'Fraktion', monospace;
+}
+
+img {
+    max-width: 25%;
+}
+
+.hidden {
+    display: none;
+}
+
 /* Typography */
 h1 {
-    font-family: 'Major Mono Display', monospace;
     text-transform: lowercase;
     -webkit-text-stroke: 4px white;
 }
@@ -57,7 +60,7 @@ h1 span {
 }
 
 p {
-    margin: 0;
+    margin: 0 0 0.5em;
     padding: 0;
 }
 
@@ -70,20 +73,25 @@ header {
 .typewriter {
     font-family: "Fraktion", sans-serif;
     line-height: 2;
-    margin-bottom: 100px;
 }
 
 .cursor {
     margin: 0;
     display: inline-block;
     width: 30px;
-    border-bottom: 4px solid rgba(0,200,20, .75);
+    border-bottom: 4px solid rgba(0, 200, 20, .75);
 }
 
 /* Comments Typewriter */
 
-.typeComments {
-    color: hotpink;
-    /* font-size: 1.5em;
-    letter-spacing: 0.25em; */
-  }
+.comments p {
+    font-family: "Oswald", sans-serif;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 2em;
+}
+
+.emphasis {
+    color: orange;
+    font-size: 2em;
+}
