--- a/Artefact Prototype/css/style.css
+++ b/Artefact Prototype/css/style.css
@@ -38,19 +38,21 @@ body {
 }
 
 button {
+    background: var(--light-green);
     font-size: 16px;
     text-transform: uppercase;
-    background: transparent;
-    background: var(--light-green);
     color: #333;
     padding: 16px;
-    margin: 6em 0;
     font-weight: 600;
+    font-family: "Fraktion", monospace;
     border: none;
-    font-family: 'Fraktion', monospace;
-    position: fixed;
+}
+
+.buttons {
     bottom: 0;
     z-index: 999;
+    margin: 6em 0;
+    position: fixed;
 }
 
 .hidden {
@@ -73,7 +75,7 @@ h1 span {
 }
 
 p {
-    margin: 0 0 0.5em;
+    margin: 0 0 1em;
     padding: 0;
 }
 
