--- a/Artefact Prototype/css/style.css
+++ b/Artefact Prototype/css/style.css
@@ -67,12 +67,15 @@ button {
 }
 
 /* Typography */
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     margin: 0;
     padding: 0;
 }
 
-p, ul {
+p,
+ul {
     margin: 0 0 1em;
     padding: 0;
     list-style: none;
@@ -91,6 +94,14 @@ img {
     max-width: 200px;
 }
 
+/* Main Grid */
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 12em;
+}
+
 /* Typewriter Effect */
 .typewriter {
     font-family: "Fraktion", sans-serif;
@@ -102,7 +113,7 @@ img {
     margin: 0;
     display: inline-block;
     width: 30px;
-    border-bottom: 4px solid rgba(144,198,243,0.75);
+    border-bottom: 4px solid rgba(144, 198, 243, 0.75);
 }
 
 /* Warning Text */
@@ -112,7 +123,8 @@ img {
 }
 
 /* Speech Bubbles */
-.bubble {
+.bubble,
+.exampleBubble {
     position: fixed;
     background-color: var(--main-color);
     max-width: 500px;
@@ -125,7 +137,7 @@ img {
     user-select: none;
 }
 
-.bubble:before {
+/* .bubble:before {
     content: "";
     width: 0px;
     height: 0px;
@@ -136,16 +148,10 @@ img {
     border-bottom: 20px solid transparent;
     left: 32px;
     bottom: -24px;
-}
+} */
 
 .bubble b {
     font-size: 1.25em;
     font-weight: 800;
     text-transform: uppercase;
 }
-
-/* Info Section */
-#info div {
-    grid-template-columns: 1fr 1fr;
-}
-
