--- a/Artefact Prototype/css/style.css
+++ b/Artefact Prototype/css/style.css
@@ -31,7 +31,9 @@ html {
 body {
     height: calc(100vh - 14em);
     color: var(--white);
-    background-color: var(--black);
+    background: var(--black);
+    background: linear-gradient(15deg, rgba(6, 9, 14, 1) 0%, rgba(41, 49, 68, 1) 80%, rgba(27, 37, 62, 1) 100%);
+    background-attachment: fixed;
     font-size: 20px;
     /* padding: 3em 4em; */
     font-family: "Poppins", sans-serif;
@@ -46,6 +48,11 @@ body {
     display: none;
 }
 
+iframe {
+    width: 100%;
+    height: 400px;
+}
+
 /* Button Styling */
 
 button {
@@ -57,6 +64,10 @@ button {
     font-weight: 600;
     font-family: "Fraktion", monospace;
     border: none;
+}
+
+button:hover {
+    outline: 3px solid var(--white);
 }
 
 .buttons {
@@ -79,10 +90,6 @@ ul {
     margin: 0 0 1em;
     padding: 0;
     list-style: none;
-}
-
-li {
-    font-weight: bold;
 }
 
 /* Header */
@@ -134,7 +141,10 @@ img {
     font-weight: bold;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     cursor: pointer;
-    user-select: none;
+}
+
+.bubble:hover {
+    outline: 3px solid var(--alt-color);
 }
 
 /* .bubble:before {
