--- a/Artefact Prototype/css/style.css
+++ b/Artefact Prototype/css/style.css
@@ -113,8 +113,8 @@ header {
     margin-bottom: 100px;
 }
 
-img {
-    max-width: 200px;
+header img {
+    max-width: 350px;
 }
 
 /* Main Grid */
