--- a/Artefact Prototype/css/style.css
+++ b/Artefact Prototype/css/style.css
@@ -62,6 +62,7 @@ button {
     padding: 16px;
     font-weight: 600;
     border: none;
+    margin-top: 1em;
 }
 
 button:hover {
@@ -110,7 +111,7 @@ a:hover {
 
 /* Header */
 header {
-    margin-bottom: 100px;
+    margin-bottom: 3em;
 }
 
 header img {
@@ -154,7 +155,8 @@ header img {
     font-family: "Poppins", sans-serif;
 }
 
-.bubble:hover {
+.bubble:hover,
+.exampleBubble:hover {
     outline: 3px solid var(--alt-color);
 }
 
@@ -166,6 +168,6 @@ header img {
 
 /* Warning Section */
 
-#warning p {
-    font-family: "Poppins", sans-serif;
+#warning h2 {
+    margin: 0 0 1em;
 }
