--- a/Artefact Prototype/css/mediaQueries.css
+++ b/Artefact Prototype/css/mediaQueries.css
@@ -1,6 +1,18 @@
 /* Media Queries */
 
-@media screen and (min-width: 700px) {
+@media screen and (min-width: 1100px) {
+    .wrapper {
+        padding: 3em;
+    }
+
+    .buttons {
+        margin: 3em 0;
+    }
+
+
+}
+
+@media screen and (min-width: 1180px) {
     body {
         font-size: 20px;
         line-height: 1.5;
@@ -34,10 +46,6 @@
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
         cursor: pointer;
         font-family: "Poppins", sans-serif;
-    }
-
-    #info {
-        margin-bottom: unset;
     }
 
 }
