--- a/Artefact Prototype/css/style.css
+++ b/Artefact Prototype/css/style.css
@@ -34,11 +34,11 @@ body {
     background-attachment: fixed;
     font-size: 16px;
     font-family: "Fraktion", monospace;
-    line-height: 1.25;
+    line-height: 1.5;
 }
 
 .wrapper {
-    padding: 1em 1em;
+    padding: 2em;
 }
 
 .hidden {
@@ -52,6 +52,20 @@ iframe {
 
 /* Button Styling */
 
+.buttons {
+    z-index: 999;
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 16px;
+    background: rgba(0, 0, 0, 0.25);
+    padding: 16px;
+    display: flex;
+    flex-direction: row;
+    gap: 16px;
+}
+
 button {
     background: var(--alt-color);
     font-size: 16px;
@@ -60,18 +74,11 @@ button {
     padding: 16px;
     font-weight: 600;
     border: none;
-    margin-top: 1em;
+    border-radius: 8px;
 }
 
 button:hover {
     outline: 3px solid var(--white);
-}
-
-.buttons {
-    bottom: 0;
-    z-index: 999;
-    margin: 1em 0;
-    position: fixed;
 }
 
 /* Typography */
@@ -93,7 +100,7 @@ h3 {
 
 p,
 ul {
-    margin: 0 0 1em;
+    margin: 0 0 2em;
     padding: 0;
     list-style: none;
 }
@@ -151,7 +158,7 @@ header img {
     font-family: "Poppins", sans-serif;
 }
 
-.exampleBubble{
+.exampleBubble {
     margin-top: 1em;
     position: static;
 }
@@ -172,7 +179,7 @@ header img {
     margin: 0 0 1em;
 }
 
-#warning,
+/* #warning,
 #info {
     margin-bottom: 8em;
-}
+} */
